Add script for learning goals

--- a/build.gradle
+++ b/build.gradle
@@ -99,5 +99,6 @@ task renderWithRemarksEN(type: RenderCurriculumTask,
   }
 }
 
+apply from: 'scripts/includeLearningObjectives.gradle'
 
 defaultTasks "buildDocs"
