--- a/build.gradle
+++ b/build.gradle
@@ -65,10 +65,9 @@ class RenderCurriculumTask extends AsciidoctorTask {
 }
 
 task buildDocs {
-	group 'Documentation'
-	description 'Grouping task for generating all languages in several formats'
-   dependsOn "renderNoRemarksDE"
-  // dependsOn "renderNoRemarksDE", "renderNoRemarksEN", "renderWithRemarksDE", "renderWithRemarksEN"
+  group 'Documentation'
+  description 'Grouping task for generating all languages in several formats'
+  dependsOn "includeLearningObjectives", "renderNoRemarksDE", "renderNoRemarksEN", "renderWithRemarksDE", "renderWithRemarksEN"
 }
 
 task renderNoRemarksDE(type: RenderCurriculumTask,
