--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.asciidoctor:asciidoctorj-pdf:1.5.0-beta.2"
+    classpath "org.asciidoctor:asciidoctorj-pdf:1.5.3"
   }
 }
 plugins {
@@ -52,11 +52,13 @@ class RenderCurriculumTask extends AsciidoctorTask {
       'currentDate'      : currentDate,
       'language'         : language,
       'withRemarks'      : withRemarks,
-      'withFeedback'     : true,
       'debug_adoc'       : false,
       'pdf-stylesdir'    : '../pdf-theme/themes',
       'pdf-fontsdir'     : '../pdf-theme/fonts',
-      'pdf-style'        : 'isaqb'
+      'pdf-style'        : 'isaqb',
+      'with-uniqe-LG-id' : false,
+      'allow-uri-read'   : true,
+      'outputDir'        : outputDir
     ]
   }
 }
@@ -64,7 +66,7 @@ class RenderCurriculumTask extends AsciidoctorTask {
 task buildDocs {
 	group 'Documentation'
 	description 'Grouping task for generating all languages in several formats'
-   dependsOn "renderNoRemarksDE"
+   dependsOn "includeLearningObjectives", "renderNoRemarksDE"
   // dependsOn "renderNoRemarksDE", "renderNoRemarksEN", "renderWithRemarksDE", "renderWithRemarksEN"
 }
 
@@ -75,12 +77,6 @@ task renderNoRemarksDE(type: RenderCurriculumTask,
   }
 }
 
-task renderWithRemarksDE(type: RenderCurriculumTask,
-     constructorArgs: [curriculumBaseName, curriculumFileName, currentDate, "DE", true]) {
-   doLast {
-     addSuffixToCurriculum("_remarks_de")
-   }
- }
 
 task renderNoRemarksEN(type: RenderCurriculumTask,
     constructorArgs: [curriculumBaseName, curriculumFileName, currentDate, "EN", false]) {
@@ -89,24 +85,10 @@ task renderNoRemarksEN(type: RenderCurriculumTask,
   }
 }
 
-task renderWithRemarksEN(type: RenderCurriculumTask,
-     constructorArgs: [curriculumBaseName, curriculumFileName, currentDate, "EN", true]) {
-   doLast {
-     addSuffixToCurriculum("_remarks_en")
-   }
- }
 
 
 
-task publish(type: GradleBuild) {
- String travisPr = System.getenv('TRAVIS_PULL_REQUEST')
- if ("false".equals(travisPr)) {
-    buildFile = 'publish.gradle'
-    tasks = ['gitPublishPush']
-  } else {
-    println 'env var TRAVIS_PULL_REQUEST says we build for PR #' + travisPr + ', won\'t publish docs!'
-  }
-}
+apply from: 'scripts/includeLearningObjectives.gradle'
 
 
 defaultTasks "buildDocs"
