--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,8 @@ class RenderCurriculumTask extends AsciidoctorTask {
 task buildDocs {
   group 'Documentation'
   description 'Grouping task for generating all languages in several formats'
-  dependsOn "includeLearningObjectives", "renderNoRemarksDE", "renderNoRemarksEN", "renderWithRemarksDE", "renderWithRemarksEN"
+  dependsOn "includeLearningObjectives", "renderNoRemarksDE" 
+  //, "renderNoRemarksEN"
 }
 
 task renderNoRemarksDE(type: RenderCurriculumTask,
@@ -80,12 +81,6 @@ task renderNoRemarksDE(type: RenderCurriculumTask,
   }
 }
 
-task renderWithRemarksDE(type: RenderCurriculumTask,
-     constructorArgs: [curriculumBaseName, curriculumFileName, germanDate, "DE", true]) {
-  doLast {
-    addSuffixToCurriculum("-remarks-de")
-  }
-}
 
 task renderNoRemarksEN(type: RenderCurriculumTask,
     constructorArgs: [curriculumBaseName, curriculumFileName, englishDate, "EN", false]) {
@@ -94,12 +89,6 @@ task renderNoRemarksEN(type: RenderCurriculumTask,
   }
 }
 
-task renderWithRemarksEN(type: RenderCurriculumTask,
-     constructorArgs: [curriculumBaseName, curriculumFileName, englishDate, "EN", true]) {
-  doLast {
-    addSuffixToCurriculum("-remarks-en")
-  }
-}
 
 apply from: 'scripts/includeLearningObjectives.gradle'
 
