--- a/.github/workflows/build_releasecandidate.yml
+++ b/.github/workflows/build_releasecandidate.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI – Release Candidate
 
 # Controls when the action will run. Triggers the workflow on push events if the pushed
 # tag is a release candidate
