--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Checkout submodules
       uses: textbook/git-checkout-submodule-action@master
+    - name: Verify Gradle Wrapper
+      uses: gradle/wrapper-validation-action@v1
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
