--- a/.github/workflows/build_releasecandidate.yml
+++ b/.github/workflows/build_releasecandidate.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Checkout Submodules
       uses: textbook/git-checkout-submodule-action@master
+    - name: Verify Gradle Wrapper
+      uses: gradle/wrapper-validation-action@v1
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
