--- a/.github/workflows/build_releasecandidate.yml
+++ b/.github/workflows/build_releasecandidate.yml
@@ -56,14 +56,36 @@ jobs:
         rm -rf ./build/tmp
         cp ./docs-ext/curriculum-*.pdf ./build 2>/dev/null || :
         zip -r release.zip ./build
-    - name: Upload Release Files
+        mkdir release_dir
+        cp ./build/curriculum-*.pdf ./release_dir 2>/dev/null || :
+        mv release.zip ./release_dir/release-${{ env.RELEASE_VERSION }}.zip
+    - name: Deploy Release Candidate to GitHub Pages
       if: startsWith(github.ref, 'refs/tags/')
-      id: upload-release-candidate-asset
-      uses: actions/upload-release-asset@v1
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
+        destination_dir: release-candidate
+        keep_files: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        commit_message: Publish Release Candidate ${{ env.RELEASE_VERSION }}
+    - name: Upload Release Candidate Files
+      if: startsWith(github.ref, 'refs/tags/')
+      id: upload-release-candidate-assets
+      uses: actions/github-script@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create-release-candidate.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./release.zip
-        asset_name: release-${{ env.RELEASE_VERSION }}.zip
-        asset_content_type: application/zip
+        script: |
+          const fs = require('fs').promises;
+          const { repo: { owner, repo }, sha } = context;
+
+          for (let file of await fs.readdir('./release_dir')) {
+            await github.repos.uploadReleaseAsset({
+              owner, repo,
+              release_id: ${{ steps.create-release-candidate.outputs.id }},
+              name: file,
+              data: await fs.readFile(`./release_dir/${file}`)
+            });
+          }
