--- a/build.gradle
+++ b/build.gradle
@@ -67,11 +67,10 @@ class RenderCurriculumTask extends AsciidoctorTask {
 task buildDocs {
   group 'Documentation'
   description 'Grouping task for generating all languages in several formats'
-  dependsOn "includeLearningObjectives", "renderNoRemarksDE" 
-  //, "renderNoRemarksEN"
+  dependsOn "includeLearningObjectives", "renderDE", "renderEN"
 }
 
-task renderNoRemarksDE(type: RenderCurriculumTask,
+task renderDE(type: RenderCurriculumTask,
     constructorArgs: [curriculumFileName, versionDate, "DE", false]) {
   doLast {
     addSuffixToCurriculum("-de")
@@ -79,7 +78,7 @@ task renderNoRemarksDE(type: RenderCurriculumTask,
 }
 
 
-task renderNoRemarksEN(type: RenderCurriculumTask,
+task renderEN(type: RenderCurriculumTask,
     constructorArgs: [curriculumFileName, versionDate, "EN", false]) {
   doLast {
     addSuffixToCurriculum("-en")
