Update readme and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,7 @@ advanced-template.iml
 .settings
 .vscode/settings.json
 learning-objectives.adoc
-resources/-Modul-ADOK-1.6.revHEAD.docx
+gradle/wrapper/gradle-wrapper.properties
+gradle/wrapper/gradle-wrapper.jar
+gradlew
+gradlew.bat
